<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DASM</string>
    <string name="webService">Operaciones Servicio Web</string>
    <string name="dni">DNI</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Teléfono</string>
    <string name="equipo">Equipo</string>
    <string name="add">Añadir</string>
    <string name="edit">Editar</string>
    <string name="delete">Borrar</string>
    <string name="search">Buscar</string>
    <string name="progress_title">Conectando a la base de datos</string>
    <string name="information">Información</string>
    <string name="title_activity_add">Inserción de Registro</string>
    <string name="title_activity_edit">Modificación de Registro</string>
    <string name="title_activity_delete">Borrado de Registro</string>
    <string name="title_activity_list">Consulta de Registros</string>
    <string name="first">Primero</string>
    <string name="previous">Anterior</string>
    <string name="next">Siguiente</string>
    <string name="last">Último</string>
    <string name="contador_registros">registro #page# de #total_pages#</string>
    <string name="insercion_ok">Inserción realizada</string>
    <string name="insercion_ko">Inserción cancelada</string>
    <string name="actualizacion_ok">Actualización realizada</string>
    <string name="actualizacion_ko">Actualización cancelada</string>
    <string name="borrado_ok">Borrado realizado</string>
    <string name="borrado_ko">Borrado cancelado</string>
    <string name="consulta">Consulta finalizada</string>
    <string name="menu_preferencias">Configurar conexión</string>
    <string name="preferences_url">URL Servidor</string>
    <string name="preferences_url_description">Dirección del servidor al que se realizará la conexión</string>
    <string name="preferences_url_edittext">Introduce la URL</string>
    <string name="preferences_user">Usuario</string>
    <string name="preferences_user_description">Usuario que realizará la conexión</string>
    <string name="preferences_user_edittext">Introduce usuario</string>
    <string name="preferences_pass">Palabra la Clave</string>
    <string name="preferences_pass_description">Clave del usuario que realizará la conexión</string>
    <string name="preferences_pass_edittext">Introduce la clave</string>
    <string name="servicio_ok">Servicio conectado</string>
    <string name="servicio_ko">No se ha podido establecer la conexión con el servicio. Configure la conexión.</string>
    <string name="respuesta_ko">Error en la respuesta del servidor.</string>

</resources>
